[package]
name = "github-backup"
version = "1.0.0"
edition = "2021"
authors = ["renickbuettner"]
description = "A simple tool for backing up GitHub repositories"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
