[package]
name = "github-backup"
version = "1.0.0"
edition = "2024"
authors = ["renickbuettner"]
description = "A simple tool for backing up GitHub repositories"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
indicatif = "0.17"
colored = "2.1"
